Complete zoom tests

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   <div flex>
                     <h3>{{group.name}}</h3>
                     <div class="lightDetails" layout="horizontal">
-                      <span flex> {{group.type}} </span>
+                      <span flex class='groupType'> {{group.type}} </span>
                       <img ng-src="material-icons/icons/system_icons/social/res/1x_web/ic_group_18dp.png"> 
                       <span class="groupMemberLength"> {{group.members.length}} </span>
                     </div>
