--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               type="text" 
               size="45" 
               ng-model="newGroupTitle"
-              placeholder="Add a group..."
+              placeholder="Add a Group..."
               flex></material-input>
               <div id="quickAddAdditional" ng-show="quickAddForm.$dirty">
                 <div class="custom-dropdown small">
