--- a/index.html
+++ b/index.html
@@ -18,21 +18,24 @@
     <script src="bower_components/masonry/masonry.js"></script>
     <script src="bower_components/imagesloaded/imagesloaded.js"></script>
     <script src="bower_components/angular/angular.js" type="text/javascript"></script>
-    <script src="bower_components/angular-masonry/angular-masonry.js" type="text/javascript"></script>
-    <script src="bower_components/angular-animate/angular-animate.js" type="text/javascript"></script>
     <script src="bower_components/angular-route/angular-route.js" type="text/javascript"></script>
-    <script src="bower_components/sopro-material/js/angular-material.js" type="text/javascript"></script>
+    <script src="bower_components/angular-masonry/angular-masonry.js" type="text/javascript"></script>
+    <script src="bower_components/angular-aria/angular-aria.js" type="text/javascript"></script>
+    <script src="bower_components/angular-animate/angular-animate.js" type="text/javascript"></script>
+    <script src="bower_components/hammerjs/hammer.js" type="text/javascript"></script> 
+    <script src="bower_components/angular-material/angular-material.js" type="text/javascript"></script>
     <!-- 
-    <script src="bower_components/material-titlebar/titlebar.js" type="text/javascript"></script>
+    <script src="bower_components/md-titlebar/titlebar.js" type="text/javascript"></script>
     -->
 
     <!-- Keep app.js at the end -->
     <script src="js/app.js" type="text/javascript"></script>
 
-    <link rel="stylesheet" type="text/css" href="bower_components/sopro-material/css/angular-material.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/angular-material/angular-material.css">
 
     <link rel="stylesheet" type="text/css" href="bower_components/roboto/2014/roboto-woff.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/sopro-material/css/sopro-material.css">
+    <!--<link rel="stylesheet" type="text/css" href="bower_components/sopro-material/css/sopro-material.css">
+    <link rel="stylesheet" type="text/css" href="css/docs.css">-->
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <link rel="stylesheet" type="text/css" href="css/pantheonGroupManager.css">
   </head>
